--- a/package.json
+++ b/package.json
@@ -1,19 +1,61 @@
 {
-  "name": "nestjs-typebox",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jayalfredprufrock/nestjs-typebox.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jayalfredprufrock/nestjs-typebox/issues"
-  },
-  "homepage": "https://github.com/jayalfredprufrock/nestjs-typebox#readme"
+    "name": "nestjs-typebox",
+    "version": "0.0.1",
+    "description": "",
+    "author": "Andrew Smiley <jayalfredprufrock@gmail.com>",
+    "license": "MIT",
+    "main": "dist/nestjs-typebox.cjs.js",
+    "module": "dist/nestjs-typebox.es.js",
+    "exports": {
+        "require": "./dist/nestjs-typebox.cjs.js",
+        "import": "./dist/nestjs-typebox.es.js"
+    },
+    "files": [
+        "src",
+        "dist"
+    ],
+    "scripts": {
+        "build": "vite build",
+        "lint": "eslint \"src/**/*.ts\" --fix",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "./{src,test}/**/*.ts": [
+            "eslint --fix"
+        ]
+    },
+    "peerDependencies": {
+        "@nestjs/common": "^9.0.1",
+        "@nestjs/core": "^9.0.1",
+        "@nestjs/swagger": "^6.1.1",
+        "@sinclair/typebox": "^0.24.34",
+        "rxjs": "^7.5.6"
+    },
+    "devDependencies": {
+        "@changesets/cli": "^2.24.4",
+        "@nestjs/common": "^9.0.1",
+        "@nestjs/core": "^9.0.1",
+        "@nestjs/swagger": "^6.1.1",
+        "@sinclair/typebox": "^0.24.34",
+        "@types/node": "^18.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
+        "eslint": "^8.19.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "prettier": "^2.7.1",
+        "rxjs": "^7.5.6",
+        "typescript": "^4.8.3",
+        "vite": "^3.1.3",
+        "vite-dts": "jayalfredprufrock/vite-dts#with-dist"
+    },
+    "keywords": [
+        "typebox",
+        "nestjs",
+        "json-schema",
+        "nestjs-typebox"
+    ]
 }
