chore: adjust changeset PR title

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -36,6 +36,7 @@ jobs:
             - name: Create Release Pull Request or Publish
               uses: changesets/action@v1
               with:
+                  title: New Release
                   publish: npx changeset publish
               env:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
