--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
         "vite": "^3.1.3",
         "vite-dts": "jayalfredprufrock/vite-dts#with-dist"
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "keywords": [
         "typebox",
         "nestjs",
