--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "./dist",
         "incremental": true,
