--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@nestjs/core": "^9.0.1",
         "@nestjs/swagger": "^6.1.1",
         "@sinclair/typebox": "^0.24.34",
+        "@swc/core": "^1.3.5",
         "@types/node": "^18.0.3",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
@@ -49,6 +50,7 @@
         "prettier": "^2.7.1",
         "rxjs": "^7.5.6",
         "typescript": "^4.8.3",
+        "unplugin-swc": "^1.3.2",
         "vite": "^3.1.3",
         "vite-dts": "jayalfredprufrock/vite-dts#with-dist"
     },
@@ -59,6 +61,7 @@
         "typebox",
         "nestjs",
         "json-schema",
-        "nestjs-typebox"
+        "nestjs-typebox",
+        "class-validator"
     ]
 }
