--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "lib": ["esnext"],
-        "target": "esnext",
+        "lib": ["es2022"],
+        "target": "es2022",
         "declaration": false,
         "removeComments": true,
         "emitDecoratorMetadata": true,
