--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@nestjs/common": "^9.0.1",
         "@nestjs/core": "^9.0.1",
         "@nestjs/swagger": "^6.1.1",
-        "@sinclair/typebox": "^0.25.20",
+        "@sinclair/typebox": "^0.27.4",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
@@ -36,7 +36,7 @@
         "@nestjs/common": "^9.0.1",
         "@nestjs/core": "^9.0.1",
         "@nestjs/swagger": "^6.1.1",
-        "@sinclair/typebox": "^0.25.20",
+        "@sinclair/typebox": "^0.27.4",
         "@swc/core": "^1.3.5",
         "@types/node": "^18.0.3",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -49,10 +49,10 @@
         "lint-staged": "^13.0.3",
         "prettier": "^2.7.1",
         "rxjs": "^7.5.6",
-        "typescript": "^4.8.3",
+        "typescript": "^5.0.4",
         "unplugin-swc": "^1.3.2",
-        "vite": "^3.1.3",
-        "vite-dts": "jayalfredprufrock/vite-dts#with-dist"
+        "vite": "^4.2.1",
+        "vite-dts": "jayalfredprufrock/vite-dts#vite4-with-dist"
     },
     "publishConfig": {
         "access": "public"
