--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
     "compilerOptions": {
         "lib": ["es2022"],
         "target": "es2022",
+        "module": "ES2022",
         "declaration": false,
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
-        "moduleResolution": "node",
+        "allowImportingTsExtensions": false,
         "sourceMap": true,
         "outDir": "./dist",
         "incremental": true,
