--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "nestjs-typebox",
+    "type": "module",
     "version": "1.0.7",
     "description": "",
     "author": "Andrew Smiley <jayalfredprufrock@gmail.com>",
@@ -43,8 +44,10 @@
         "@typescript-eslint/parser": "^5.30.5",
         "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-require-extensions": "^0.1.3",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "prettier": "^2.7.1",
