fix: properly import absolute nestjs package files

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "dist"
     ],
     "scripts": {
-        "build": "vite build",
+        "build": "tsc && vite build",
         "lint": "eslint \"src/**/*.ts\" --fix",
         "prepare": "husky install"
     },
