--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "lib": ["es2022"],
         "target": "es2022",
         "module": "ES2022",
+        "moduleResolution": "nodenext",
         "declaration": false,
         "removeComments": true,
         "emitDecoratorMetadata": true,
@@ -11,8 +12,10 @@
         "allowImportingTsExtensions": false,
         "sourceMap": true,
         "outDir": "./dist",
+        "noEmit": true,
         "incremental": true,
-        "strict": true
+        "strict": true,
+        "skipLibCheck": true
     },
     "include": ["src/**/*.ts"]
 }
