--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
     "name": "nestjs-typebox",
-    "type": "module",
     "version": "2.0.4",
     "description": "",
     "author": "Andrew Smiley <jayalfredprufrock@gmail.com>",
     "license": "MIT",
-    "main": "dist/nestjs-typebox.cjs",
-    "module": "dist/nestjs-typebox.mjs",
-    "exports": {
-        ".": {
-            "types": "./dist/nestjs-typebox.d.ts",
-            "require": "./dist/nestjs-typebox.cjs",
-            "import": "./dist/nestjs-typebox.mjs",
-            "default": "./dist/nestjs-typebox.cjs"
-        }
-    },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "files": [
         "src",
         "dist"
     ],
     "scripts": {
-        "build": "tsc && vite build",
+        "build": "tsc",
         "lint": "eslint \"src/**/*.ts\" --fix",
         "prepare": "husky install"
     },
@@ -42,7 +33,6 @@
         "@nestjs/core": "^9.0.1",
         "@nestjs/swagger": "^6.1.1",
         "@sinclair/typebox": "^0.28.2",
-        "@swc/core": "^1.3.5",
         "@types/node": "^18.0.3",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
@@ -56,10 +46,7 @@
         "lint-staged": "^13.0.3",
         "prettier": "^2.7.1",
         "rxjs": "^7.5.6",
-        "typescript": "^5.0.4",
-        "unplugin-swc": "^1.3.2",
-        "vite": "^4.2.1",
-        "vite-dts": "jayalfredprufrock/vite-dts#vite4-with-dist"
+        "typescript": "^5.0.4"
     },
     "publishConfig": {
         "access": "public"
