--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "lib": ["es2022"],
         "target": "es2022",
-        "module": "ES2022",
+        "module": "CommonJS",
         "moduleResolution": "nodenext",
-        "declaration": false,
+        "declaration": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
@@ -12,7 +12,6 @@
         "allowImportingTsExtensions": false,
         "sourceMap": true,
         "outDir": "./dist",
-        "noEmit": true,
         "incremental": true,
         "strict": true,
         "skipLibCheck": true
