--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dist"
     ],
     "scripts": {
+        "start": "tsc --watch",
         "build": "tsc",
         "lint": "eslint \"src/**/*.ts\" --fix",
         "prepare": "husky install"
