--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
         ]
     },
     "peerDependencies": {
-        "@nestjs/common": "^9.0.1",
-        "@nestjs/core": "^9.0.1",
-        "@nestjs/swagger": "^6.1.1",
+        "@nestjs/common": "^9.0.1 || ^10.0.3",
+        "@nestjs/core": "^9.0.1 || ^10.0.3",
+        "@nestjs/swagger": "^6.1.1 || ^7.0.11",
         "@sinclair/typebox": "^0.28.2",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
-        "@changesets/cli": "^2.24.4",
-        "@nestjs/common": "^9.0.1",
-        "@nestjs/core": "^9.0.1",
-        "@nestjs/swagger": "^6.1.1",
-        "@sinclair/typebox": "^0.28.2",
-        "@types/node": "^18.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.30.5",
-        "@typescript-eslint/parser": "^5.30.5",
-        "eslint": "^8.19.0",
-        "eslint-config-prettier": "^8.5.0",
+        "@changesets/cli": "^2.26.2",
+        "@nestjs/common": "^10.0.3",
+        "@nestjs/core": "^10.0.3",
+        "@nestjs/swagger": "^7.0.11",
+        "@sinclair/typebox": "^0.28.20",
+        "@types/node": "^20.3.2",
+        "@typescript-eslint/eslint-plugin": "^5.60.1",
+        "@typescript-eslint/parser": "^5.60.1",
+        "eslint": "^8.43.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-require-extensions": "^0.1.3",
         "eslint-plugin-simple-import-sort": "^10.0.0",
-        "husky": "^8.0.1",
-        "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1",
-        "rxjs": "^7.5.6",
-        "typescript": "^5.0.4"
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.3",
+        "prettier": "^2.8.8",
+        "rxjs": "^7.8.1",
+        "typescript": "^5.1.5"
     },
     "publishConfig": {
         "access": "public"
