--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "eslint": "^8.44.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^5.0.0-alpha.2",
+        "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-require-extensions": "^0.1.3",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
