--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@nestjs/common": "^9.0.1 || ^10.0.3",
         "@nestjs/core": "^9.0.1 || ^10.0.3",
         "@nestjs/swagger": "^6.1.1 || ^7.0.11",
-        "@sinclair/typebox": "^0.28.2 || ^0.29.4",
+        "@sinclair/typebox": "^0.32.0-dev-24",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
@@ -33,18 +33,18 @@
         "@nestjs/common": "^10.0.5",
         "@nestjs/core": "^10.0.5",
         "@nestjs/swagger": "^7.1.1",
-        "@sinclair/typebox": "^0.29.4",
+        "@sinclair/typebox": "^0.32.0-dev-24",
         "@types/node": "^20.4.1",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "eslint": "^8.44.0",
-        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-require-extensions": "^0.1.3",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "husky": "^8.0.3",
-        "lint-staged": "^13.2.3",
+        "lint-staged": "^15.2.0",
         "prettier": "^3.0.0",
         "rxjs": "^7.8.1",
         "typescript": "^5.1.6"
