--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nestjs-typebox",
-    "version": "2.6.1",
+    "version": "3.0.0-next.0",
     "description": "",
     "author": "Andrew Smiley <jayalfredprufrock@gmail.com>",
     "license": "MIT",
