--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "start": "tsc --watch",
         "build": "tsc",
         "lint": "eslint \"src/**/*.ts\" --fix",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test": "npx tsx test.ts"
     },
     "lint-staged": {
         "./{src,test}/**/*.ts": [
@@ -25,7 +26,7 @@
         "@nestjs/common": "^9.0.1 || ^10.0.3",
         "@nestjs/core": "^9.0.1 || ^10.0.3",
         "@nestjs/swagger": "^6.1.1 || ^7.0.11",
-        "@sinclair/typebox": "^0.32.4",
+        "@sinclair/typebox": "^0.32.4 || ^0.33.12",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
@@ -33,7 +34,7 @@
         "@nestjs/common": "^10.0.5",
         "@nestjs/core": "^10.0.5",
         "@nestjs/swagger": "^7.1.1",
-        "@sinclair/typebox": "^0.32.4",
+        "@sinclair/typebox": "^0.33.12",
         "@types/node": "^20.4.1",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
