--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-        "lib": ["es2022"],
+        "lib": [
+            "es2022"
+        ],
         "target": "es2022",
         "module": "NodeNext",
         "moduleResolution": "nodenext",
@@ -12,7 +14,10 @@
         "outDir": "./dist",
         "incremental": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "noUncheckedIndexedAccess": true
     },
-    "include": ["src/**/*.ts"]
+    "include": [
+        "src/**/*.ts"
+    ]
 }
