--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nestjs-typebox",
-    "version": "4.0.0-next.1",
+    "version": "4.0.0",
     "description": "",
     "author": "Andrew Smiley <jayalfredprufrock@gmail.com>",
     "license": "MIT",
@@ -23,17 +23,17 @@
         ]
     },
     "peerDependencies": {
-        "@nestjs/common": "^9.0.1 || ^10.0.3",
-        "@nestjs/core": "^9.0.1 || ^10.0.3",
-        "@nestjs/swagger": "^6.1.1 || ^7.0.11",
+        "@nestjs/common": "^9.0.1 || ^10.0.3 || ^11.0.6",
+        "@nestjs/core": "^9.0.1 || ^10.0.3 || ^11.0.6",
+        "@nestjs/swagger": "^6.1.1 || ^7.0.11 || ^11.0.3",
         "@sinclair/typebox": "^0.34.0",
         "rxjs": "^7.5.6"
     },
     "devDependencies": {
         "@changesets/cli": "^2.26.2",
-        "@nestjs/common": "^10.0.5",
-        "@nestjs/core": "^10.0.5",
-        "@nestjs/swagger": "^7.1.1",
+        "@nestjs/common": "^11.0.6",
+        "@nestjs/core": "^11.0.6",
+        "@nestjs/swagger": "^11.0.3",
         "@sinclair/typebox": "^0.34.0",
         "@types/node": "^20.4.1",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
